# cnn-server-example

./: .gitignore  CMakeLists.txt  README.md  cnn.cpp  evaluate.py  main.cpp  main.py  main.sh  mlp.cpp  train.py
data/: db.json
data/tannic/: CNN.metadata.tannic  CNN.tannic
data/weights/: CNN-4ff02eb102ffbf69de5d50487f03fd4a.pth
include/: server.hpp
models/: cnn.hpp  cnn.py  mlp.py
pytannic/: client.py  header.py
pytannic/torch/: modules.py  parameters.py  tensors.py  types.py
src/: classifier.py  compilation.py  metrics.py  persistence.py  training.py
